# maqamDetection

./: .gitignore  pyproject.toml
maqam_detect/: __init__.py  classify.py  cli.py  explain.py  histogram.py  pitch.py  sources.py  templates.py  tonic.py
maqam_detect/data/: maqam-compact.json
tests/: test_classify.py
tests/integration/: conftest.py  dataset.py  test_calibration.py  test_dataset.py
