[project]
name = "maqam-detect"
version = "0.1.0"
description = "Detect Arabic maqam from audio via cents-resolution pitch-class distribution"
requires-python = ">=3.10"
dependencies = [
  "librosa>=0.10",
  "numpy>=1.24",
  "scipy>=1.10",
  "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
maqam-detect = "maqam_detect.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maqam_detect"]

[tool.hatch.build.targets.wheel.force-include]
"maqam_detect/data/maqam-compact.json" = "maqam_detect/data/maqam-compact.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: end-to-end tests requiring the MakamTest dataset (~92MB, downloaded on first run)",
]
addopts = "-m 'not integration'"
